# LEADER

./: .gitattributes  .gitignore  CMakeLists.txt  LICENSE  README.md  elliptic_envelope.mlmodel  install-emulab-deps.sh  main.cpp  normalization.pkl  requirements.txt  standardization.pkl  tags  train.py
attacks/Hash-Collision/: bash-script.sh  json.sh  run-100.sh
attacks/Hash-Collision/server/: index2.php
automation_work/: leg.sh  run-experiment.sh
cls_builder/: cls_builder.cpp  cls_builder.h  cls_builder_rajat.h  conn.stp
consumer/: leader_consumer.cpp  leader_consumer.h  ml.py
docs/NEW_POSTER/: main.tex  uwtheme.sty
docs/POSTER/: eecs.eps  poster.tex  samplefig.eps  wifound.eps
docs/POSTER/imgs/: angr.eps  angr_horiz.eps  asynchronous.eps  better_modeling.eps  big_picture.eps  diff.eps  divider.eps  gaps.eps  interfaces.eps  libraries.eps  library.eps  no_src.eps  rehosting.eps  router.eps  similarity.eps  unknown.eps  why_binary.eps
docs/POSTER_WRITEUP/: NDSS_2019bare_final.tex  paper.bib
experiments/: config
experiments/run/: kill.sh  run.sh
experiments/setup/: assign  setup.sh  setup_server.sh  setuproute
experiments/setup/ip_addrs/: 10.1.2.x  10.1.x.x  10.2.103-112.x  10.2.112-123.x  10.2.113-122.x  10.2.123-132.x  10.2.13-22.x  10.2.133-142.x  10.2.143-152.x  (+44 more)
mitigation/: blacklistd.py  clear_blacklisting.sh  mitigator.cpp  mitigator.h  start_blacklisting.sh
offline_ml/: elliptic_envelope.mlmodel  elliptic_envelope_classification.py  train.py
offline_ml/classification_output_for_diff_outliers/: 0.5_att.txt  0.5_leg.txt  0_att.txt  0_leg.txt  2_att.txt  2_leg.txt  3_att.txt  3_leg.txt
offline_ml/data/: final_data_6f.csv  train_7f.csv  train_min_features.csv  training.csv
offline_ml/experiment_data/: all_att.txt  all_leg.txt  extracted_leg_scores.txt
producer/: conn.stp  leader_session.cpp  leader_session.h
results/: 0.1_att_ip-port.txt  0.1_att_ips.txt  0.1_leg_all.txt  0.1_leg_raw.txt  0.2_att_ip-port.txt  0.2_ip-port.txt  0.2_leg_all.txt  0.2_leg_ips.txt  0_att_ip-port.txt  0_att_ips.txt  0_leg_all.txt  0_leg_ip-port.txt  0_leg_ips.txt  0_leg_raw.txt
scoring/: ml.py  scorer.cpp  scorer.h
src/: .gitignore  main.cpp
src/cls_builder/: cls_builder.cpp  cls_builder.h  conn.stp
src/scoring/: ml.py  scorer.cpp
(+24 files in other folders)
